--- a/api/package.json
+++ b/api/package.json
@@ -24,7 +24,7 @@
       "no-unused-vars": 1
     }
   },
-  "author": "toan@tabvn.com",
+  "author": "rohit@metapercept.com",
   "license": "ISC",
   "dependencies": {
     "archiver": "^2.1.1",
